Now using not @Deprecated methods in SkinManager + updated error logging + removed unused logging (was previously commented)
Signed-off-by: mattmunich <76434754+mattmunichyt@users.noreply.github.com>